--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -2,9 +2,14 @@
   align-items: center;
   color: $white;
   display: flex;
+  font-size: 1.875em;
   height: 1.5em;
   justify-content: center;
   margin: 0;
+
+  @media(min-width: $medium-screen) {
+    font-size: 3.75em;
+  }
 }
 
 .Header__emoji {
